[tool.poetry]
name = "my_flask_example"
version = "0.1.0"
description = ""
authors = ["Jan Giacomelli <jan@typless.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pre-commit = "^2.7.1"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
safety = "^1.9.0"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
